# robotics-data-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: dummy_imu.csv
src/robotics_data_engine/: alignment.py  cli.py  config.py  episode_health.py  episode_invariants.py  episodes.py  fingerprint.py  hashing.py  health.py  invariants.py  io_utils.py  parquet_builder.py  qa.py  sensor_normalize.py  session.py  video_timestamps.py  warnings.py
src/scripts/: inspect_episodes.py  label_episode.py  write_parquet_local.py
