[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-data-engine"
version = "0.1.0"
description = "Deterministic multimodal robotics dataset construction pipeline"
authors = [{name = "Phil Do"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
